pgweb/templates/httproute.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yaml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("domain is missing or invalid")
#@ end
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgweb
  namespace: pgweb
  labels: #@ labels("httproute")
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: pgweb
  hostnames:
  #@ for/end host in data.values.configuration.ingress.domains:
  - #@ "pgweb." + host
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: pgweb
      port: 8081
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains"

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: pgweb
  namespace: pgweb
  labels: #@ labels("security-policy")
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: pgweb
  oidc:
    provider:
      issuer: https://dex.jamesclonk.io/dex # TODO: template via plato!!!
    clientID: envoy-gateway
    clientSecret:
      name: pgweb-oidc-client-secret
    redirectURL: https://pgweb.jamesclonk.io/oauth2/callback # TODO: template via plato!!!
    logoutPath: /logout
