pgweb/templates/ingress.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("configuration.ingress.domain is missing or invalid")
#@ end
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pgweb
  namespace: pgweb
  labels: #@ labels("ingress")
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: http://basic-auth.ingress-nginx.svc.cluster.local:8080
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Ingress"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Authorization "";
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: pgweb-tls
    hosts:
    #@ for/end host in data.values.configuration.ingress.domains:
    - #@ "pgweb." + host
  rules:
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "pgweb." + host
    http:
      paths:
      - backend:
          serviceName: pgweb
          servicePort: 8081
