pgweb/templates/network_policy.yaml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yaml", "labels")

#@ if data.values.pgweb.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgweb
  namespace: pgweb
  labels: #@ labels("netpol")
spec:
  podSelector:
    matchLabels: #@ labels("dashboard")
  ingress:
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 8081
  - from: #! allow access for gateway-api-controller
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: envoy-gateway-system
      podSelector: {}
    ports:
    - port: 8081
#@ end
